Bug 39653 - Fix <noembed> and <plaintext> content models
Summary: Fix <noembed> and <plaintext> content models
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 39259
  Show dependency treegraph
 
Reported: 2010-05-25 00:08 PDT by Adam Barth
Modified: 2010-05-25 00:20 PDT (History)
1 user (show)

See Also:


Attachments
Patch (3.33 KB, patch)
2010-05-25 00:11 PDT, Adam Barth
eric: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2010-05-25 00:08:57 PDT
Fix <noembed> and <plaintext> content models
Comment 1 Adam Barth 2010-05-25 00:11:33 PDT
Created attachment 56982 [details]
Patch
Comment 2 Eric Seidel (no email) 2010-05-25 00:19:07 PDT
Comment on attachment 56982 [details]
Patch

LGTM.
Comment 3 Adam Barth 2010-05-25 00:20:37 PDT
Committed r60137: <http://trac.webkit.org/changeset/60137>