2010-05-25  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Fix <noembed> and <plaintext> content models
        https://bugs.webkit.org/show_bug.cgi?id=39653

        Update expected result to show new passing test.

        * html5lib/webkit-runner-expected-html5.txt:
2010-05-25  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Fix <noembed> and <plaintext> content models
        https://bugs.webkit.org/show_bug.cgi?id=39653

        PLAINTEXTState is my favorite lexer state.  :)

        * html/HTML5TreeBuilder.cpp:
        (WebCore::HTML5TreeBuilder::passTokenToLegacyParser):

Canonical link: https://commits.webkit.org/51206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60137 268f45cc-cd09-0410-ab3c-d52691b4dbfc